# tiny-quickstart-expo

./: .env  .env.example  .gitignore  Cargo.toml  README.md  app.json  package-lock.json  package.json  rust-toolchain.toml  server.js
pkg/plaid-sdk/: Cargo.toml
pkg/plaid-sdk/src/: error.rs  lib.rs  traits.rs
pkg/plaid-sdk/src/api/: accounts.rs  items.rs  link.rs  mod.rs  processor.rs
pkg/plaid-sdk/src/model/: accounts.rs  common.rs  error.rs  items.rs  link.rs  mod.rs  processor.rs
pkg/server/: Cargo.toml
pkg/server/migrations/2024-08-17-115614_create_clients/: up.sql
pkg/server/src/: config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
scripts/: setup.sh
server/: Cargo.toml
server/src/: config.rs  db.rs  error.rs  handlers.rs  lib.rs
src/: App.tsx
src/screens/: Home.tsx  LinkDemo.tsx  Success.tsx
