[workspace]
resolver = "2"
members = ["server"]

[workspace.dependencies]
actix-server = "2.5.0"
actix-web = "4.9.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env"] }
diesel = { version = "2.2.2", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
plaid = "8.0.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
