[workspace]
resolver = "2"
members = ["pkg/server", "pkg/plaid-sdk"]

[workspace.dependencies]
actix-server = "=2.3.0"
actix-web = "=4.4.0"
async-trait = "=0.1.74"
chrono = { version = "=0.4.38", features = ["serde"] }
clap = { version = "=4.1.1", features = ["env", "derive"] }
diesel = { version = "=2.1.6", features = [
    "postgres",
    "uuid",
    "chrono",
    "r2d2",
    "serde_json",
] }
dotenvy = "0.15.7"
env_logger = "0.9.0"
eyre = "0.6"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "=0.11.22", features = ["json"] }
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
thiserror = "=1.0.50"
tokio = { version = "=1.34.0", features = ["full"] }
