[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-server = { workspace = true }
actix-web = { workspace = true}
chrono = { workspace = true }
clap = { workspace = true}
diesel = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true}
eyre = { workspace = true}
log = { workspace = true}
plaid-sdk = { path = "../plaid-sdk" }
serde = { workspace = true}
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true}
